--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 		<meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="John Doe&#39;s Personal blog about everything" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://sharadsingh.net/404.html" />
+<meta property="og:url" content="/404.html" />
 
 
 		<meta itemprop="name" content="404 Page not found">
@@ -82,7 +82,7 @@
 			<input class="widget-search__field" type="search" placeholder="SEARCH…" value="" name="q" aria-label="SEARCH…">
 		</label>
 		<input class="widget-search__submit" type="submit" value="Search">
-		<input type="hidden" name="sitesearch" value="http://sharadsingh.net" />
+		<input type="hidden" name="sitesearch" value="/" />
 	</form>
 </div>
 <div class="widget-categories widget">
