--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta property="og:title" content="Tech blog" />
 <meta property="og:description" content="John Doe&#39;s Personal blog about everything" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://sharadsingh.net/" />
+<meta property="og:url" content="/" />
 
 
 		<meta itemprop="name" content="Tech blog">
@@ -21,7 +21,7 @@
 	<link rel="dns-prefetch" href="//fonts.gstatic.com">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700">
 
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 	
 	<link rel="alternate" type="application/rss+xml" href="/index.xml" title="Tech blog">
 
@@ -90,7 +90,7 @@
 			<input class="widget-search__field" type="search" placeholder="SEARCH…" value="" name="q" aria-label="SEARCH…">
 		</label>
 		<input class="widget-search__submit" type="submit" value="Search">
-		<input type="hidden" name="sitesearch" value="http://sharadsingh.net" />
+		<input type="hidden" name="sitesearch" value="/" />
 	</form>
 </div>
 <div class="widget-categories widget">
